<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_gravity="center_horizontal"
            android:textSize="65dp"
            android:background="@drawable/borde_texto"
            android:textColor="#0000ff"
            android:shadowRadius="30"
            android:shadowColor="#000000"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="100dp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btnPlay"
            android:text="@string/play"
            android:onClick="plei"
            android:layout_margin="15dp"
            android:background="@color/blanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btnInst"
            android:onClick="howto"
            android:text="@string/h2p"
            android:layout_margin="15dp"
            android:background="@color/blanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</LinearLayout>